dark mode fixes

--- a/src/styles/History.css
+++ b/src/styles/History.css
@@ -141,10 +141,12 @@
 
   body.dark-mode .export-button{
     background-color: #9b8886;
+    border: 2px solid #694c4c;
   }
 
   body.dark-mode .import-label {
     background-color: #9b8886;
+    border: 2px solid #694c4c;
   }
 
   
